fixing issue with un-expanded sets